--- a/bio.html
+++ b/bio.html
@@ -10,7 +10,7 @@
 <body>
   <div id="app">
     <!-- Navigation bar -->
-    <navbar id="navbar">
+    <navbar id="navbar" role="Navigation" aria-label="Navigation menu">
       <a class="navbar-logo" href="index.html" aria-label="Link to home page">
         <img id="logo" src="./assets/logo_white.png" alt="Logo of website">
       </a>
@@ -43,7 +43,7 @@
         <br>
         <div class="content">
           <div class="introduction margin-center center-body">
-            <p>
+            <p role="description" aria-label="Self description">
               I'm a master student from Northwestern University and also an incoming Software Development Engineer of Amazon Web Service. I've been programming since 2015 and passionate in Java and Python. I also pick up web development skills during my later university life.
             </p>
           </div>
